syntax = "proto3";
package video;
option go_package = "skillshare/video/protos/video";

message VideoUploadRequest{
    oneof data{
        VideoInfo info = 1;
        bytes buffer = 2;
    }
}

message VideoUploadResponse{
    string id = 1;
    uint32 size = 2;
}

message VideoInfo {
    string originalname = 1;
    string encoding = 2;
    string mimetype = 3;
    string size = 4;
    string creator = 5;
    string title = 6;
    string description = 7;
    string status = 8;
    string permission = 9;
    string videoId = 10;
}

message VideoUploaded {
    string videoId = 1;
    string videoLink = 2;
    string creator = 3;
    string title = 4;
    string description = 5;
    string status = 6;
    string permission = 7;
    string createdAt = 8;
    string updatedAt = 9;
}

message Empty{}

message VideoUploadedResponse {
    VideoUploaded videoUploaded = 1;
}

message NumberRequest {
    uint32 number = 1;
}

message VideoCriteriaRequest {
    string id = 1;
    string userId = 2;
    string username = 3;
}

message VideoStatusRequest {
    string id = 1;
    string uid = 2;
    string status = 3;
}

message VideoStatusResponse {
    string result = 1;
}


service VideoService {
    rpc UploadVideo(stream VideoUploadRequest) returns (VideoUploadResponse) {};
    rpc GetAllVideo(Empty) returns (stream VideoUploadedResponse) {};
    rpc GetRandomVideo(NumberRequest) returns (stream VideoUploadedResponse) {};
    rpc GetVideoByCriteria(VideoCriteriaRequest) returns (stream VideoUploadedResponse) {};
    rpc UpdateVideoStatus(VideoStatusRequest) returns (VideoStatusResponse) {};
    rpc EditVideo(VideoInfo) returns (VideoInfo) {};
    rpc DeleteVideo(VideoStatusRequest) returns (VideoStatusResponse) {};
}