// Original file: src/protos/video.proto


export interface VideoUploaded {
  'videoId'?: (string);
  'videoLink'?: (string);
  'creator'?: (string);
  'title'?: (string);
  'description'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface VideoUploaded__Output {
  'videoId'?: (string);
  'videoLink'?: (string);
  'creator'?: (string);
  'title'?: (string);
  'description'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
